erDiagram
    tenants ||--o{ users : contains
    tenants ||--o{ api_keys : issues
    tenants ||--|| tenant_configs : configures
    tenants ||--o{ webhooks : manages
    tenants ||--o{ feature_flags : enables
    tenants ||--o{ usage_quotas : defines
    
    users ||--o{ sessions : has
    users }|--|| roles : assigned
    roles }|--o{ permissions : has
    
    tenants ||--o{ calls : makes
    calls ||--o{ call_recordings : records
    calls ||--o{ call_transcripts : transcribes
    calls ||--o{ dtmf_events : tracks
    tenants ||--o{ phone_numbers : owns
    tenants ||--o{ sip_trunks : uses
    tenants ||--o{ call_routing_rules : applies
    
    tenants ||--o{ subscriptions : has
    subscriptions ||--o{ invoices : generates
    invoices ||--o{ invoice_items : contains
    subscriptions ||--o{ usage_records : tracks
    tenants ||--o{ payment_methods : stores
    tenants ||--o{ payment_intents : processes
    tenants ||--o{ coupons : offers
    plans ||--o{ subscriptions : defines
    
    tenants ||--o{ call_metrics : measures
    tenants ||--o{ voice_quality_logs : logs
    tenants ||--o{ tenant_analytics : aggregates
    tenants ||--o{ conversation_analytics : analyzes
    system_metrics ||--o{ business_metrics : influences
    
    tenants ||--o{ emergency_calls : initiates
    emergency_calls ||--|| psap_info : routes_to
    tenants ||--o{ emergency_contacts : stores
    tenants ||--o{ location_validations : performs
    tenants ||--o{ compliance_audits : conducts
    tenants ||--o{ test_call_records : logs
    
    classDef auth fill:#e1f5fe
    classDef tenant fill:#f3e5f5
    classDef telephony fill:#e8f5e8
    classDef billing fill:#fff3e0
    classDef analytics fill:#fce4ec
    classDef emergency fill:#f1f8e9
    
    class users,sessions,roles,permissions,auth
    
    class tenants,tenant_configs,api_keys,webhooks,feature_flags,usage_quotas,tenant
    
    class calls,call_recordings,call_transcripts,phone_numbers,sip_trunks,call_routing_rules,dtmf_events,telephony
    
    class subscriptions,invoices,invoice_items,usage_records,payment_methods,payment_intents,plans,coupons,billing
    
    class call_metrics,voice_quality_logs,tenant_analytics,conversation_analytics,system_metrics,business_metrics,analytics
    
    class emergency_calls,emergency_contacts,psap_info,location_validations,compliance_audits,test_call_records,emergency